Fixes logo and company name not being clickable on tablet/mobile (DT-1346)

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -37,6 +37,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='darken(@color
     @media @tablet {
         width: 100%;
         float: none;
+        margin-top: -30px;
     }
 }
 
@@ -112,7 +113,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='darken(@color
         a {
             &.pull {
                 @media @tablet {
-                    top: 12px;
+                    top: 0;
                 }
             }
         }
@@ -161,6 +162,7 @@ div.widget .extendednavigation ul.align-center, div.widget.extendednavigation ul
         margin-bottom: 5px;
         @media @tablet {
             max-width: 90%;
+            float: none;
         }
         .widget.logo {
             margin-right: 10px;
